# HighPerf-RTSP-Player

./: CMakeLists.txt
includes/: AVRAII.h  FrameQueue.h  PacketQueue.h  PlayerState.h  VideoTranscoder.h  YUVRenderer.h
src/: FrameQueue.cpp  PacketQueue.cpp  PlayerState.cpp  VideoTranscoder.cpp  YUVRenderer.cpp  localplayer.cpp  main.cpp  test_openGL.cpp
